# puncture-app

./: .gitignore  .metadata  LICENSE  README.md  build-arm-android.sh  build-macos.sh  flutter_rust_bridge.yaml  pubspec.yaml
.github/workflows/: android-release.yml  ci.yml
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/io/github/joschisan/puncture/: MainActivity.kt
lib/: main.dart
lib/models/: lnurl_pay_info.dart  payment.dart
lib/screens/: address_screen.dart  amount_screen.dart  base_screen.dart  confirmation_screen.dart  connect_screen.dart  create_invoice_screen.dart  detection_screen.dart  display_invite_screen.dart  display_invoice_screen.dart  home_screen.dart  invite_detection_screen.dart  ln_address_screen.dart  ln_amount_screen.dart  pay_invoice_screen.dart  payment_details_screen.dart  receive_screen.dart  recovery_screen.dart  scan_recovery_screen.dart  send_screen.dart
lib/utils/: account.dart  fp_utils.dart  http_utils.dart  ln_address.dart  lnurl_utils.dart  notification_utils.dart
lib/widgets/: address_field.dart  amount_display.dart  amount_field.dart  async_action_button.dart  navigation_button.dart  qr_code_with_copy.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: lib.rs
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
