[package]
name = "puncture_flutter_bridge"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[dependencies]
flutter_rust_bridge = "=2.10.0"
puncture-core = { git = "https://github.com/joschisan/puncture.git" }
puncture-client = { git = "https://github.com/joschisan/puncture.git" }
puncture-client-core = { git = "https://github.com/joschisan/puncture.git" }
puncture-payment-request = { git = "https://github.com/joschisan/puncture.git" }

# Force bundled SQLite for all targets
libsqlite3-sys = { version = "*", features = ["bundled"] }

# Compile OpenSSL from source during the build process
openssl = { version = "*", features = ["vendored"] }
